# pyPTerodaCTILES

./: .gitignore  Makefile  README.md  pyproject.toml  tox.ini
src/pyPTerodaCTILES/io/: batch_converter.py  readers.py
src/scripts/: convert_to_netcdf.py  convert_zip_to_netcdf.py
