[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyPTerodaCTILES"
dynamic = ["version"]
description = "Python tools for PTerodaCTILES fluid code"
authors = [
    {name = "Dimtar Vlaykov", email = "d.vlaykov@exeter.ac.uk"},
]

urls = {homepage = "https://github.com/dvlaykov/pyPTerodaCTILES"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11"
]

requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.6",
    "xarray[io,accel,parallel]>=2023.9",
    "f90nml",
    "numpy>=1.21"
]

[project.optional-dependencies]
dev = [
    "tox",
    "mypy",
    "pytest",
    "ruff"
]

[tool.setuptools_scm]

[project.scripts]
convert_pterodactiles_dat_to_netcdf = "scripts.convert_to_netcdf:main"
